--- a/src/app/projects/componenets/project-form/project-form.component.html
+++ b/src/app/projects/componenets/project-form/project-form.component.html
@@ -20,7 +20,7 @@
                               class="form-control"
                               id="name"
                               placeholder="Enter project name"
-                              formControlName="name"
+                              formControlName="projectName"
                             />
                           </div>
                           <div class="col-md-4">
