--- a/src/app/projects/componenets/projects-list-mat-table/projects-list-mat-table.component.html
+++ b/src/app/projects/componenets/projects-list-mat-table/projects-list-mat-table.component.html
@@ -14,7 +14,7 @@
           <mat-expansion-panel-header>
             <mat-panel-title>
               <span class="badge badge-primary">
-                {{project.name}}
+                {{project.projectName}}
               </span>
             </mat-panel-title>
             <mat-panel-title>
@@ -25,7 +25,7 @@
                  {{'Edit' | translate}}
                 </button>
                 <button mat-raised-button color="accent" class="w-30 " 
-                (click)="openDeleteDialog(project.id)" >
+                (click)="openDeleteDialog(project.id,'project')" >
                 <!-- *ngIf="share.getBtnGuard('ProjectsList','Delete')" -->
                     <mat-icon> cancel_presentation</mat-icon>
                     {{'Delete' | translate}}
@@ -52,22 +52,22 @@
             <mat-expansion-panel-header>
               <mat-panel-title>
                 <span class="badge badge-primary">
-                  {{task.name}}
+                  {{task.taskTitle}}
                 </span>
               </mat-panel-title>
               <mat-panel-title>
                 <span class="badge badge-danger">
-                  {{task.startDate}}
+                  {{task.startDate | date:'medium'}}
                 </span>
               </mat-panel-title>
               <mat-panel-title>
                 <span class="badge badge-danger">
-                  {{task.endDate}}
+                  {{task.endDate | date:'medium'}}
                 </span>
               </mat-panel-title>
               <mat-panel-title>
                 <!-- *ngIf="share.getBtnGuard('ProjectsList','Delete')"  -->
-                   <mat-icon color="accent" (click)="openDeleteDialog(task.id)" > cancel_presentation</mat-icon>
+                   <mat-icon color="accent" (click)="openDeleteDialog(task.id,'task')" > cancel_presentation</mat-icon>
             </mat-panel-title> 
             </mat-expansion-panel-header>
           </mat-expansion-panel>
