--- a/src/app/layout/components/sidebar/sidebar.component.html
+++ b/src/app/layout/components/sidebar/sidebar.component.html
@@ -26,18 +26,18 @@
 
 
       <ul class="menu-ul">
-          <li *ngFor="let item of menuItems" [routerLink]="[item.url]">
+          <li *ngFor="let item of menuItems" [routerLink]="item.url">
             <mat-icon>{{item.icon}}</mat-icon>
-            <span [routerLink]="[item.url]" (click)="item.collapsed=!item.collapsed"> {{item.name | translate}} </span> 
+            <span [routerLink]="item.url" (click)="item.collapsed=!item.collapsed"> {{item.name | translate}} </span> 
              <mat-icon class="ltr-mat-icon" *ngIf="item.children" (click)="item.collapsed=true" [hidden]="item.collapsed">keyboard_arrow_right</mat-icon>
              <mat-icon class="rtl-mat-icon" *ngIf="item.children" (click)="item.collapsed=true" [hidden]="item.collapsed">keyboard_arrow_left</mat-icon>
              <mat-icon *ngIf="item.children && item.collapsed"  (click)="item.collapsed=false" >keyboard_arrow_down</mat-icon>
                 <ul *ngIf="item.children && item.collapsed" class="childernUl">
-                    <li  *ngFor="let subItem of item.children" class="subItem" [routerLink]="[subItem.url]" 
+                    <li  *ngFor="let subItem of item.children" class="subItem" [routerLink]="subItem.url" 
                     (click)="toggleSelected(subItem)"
                     [class.selected]="subItem.selected">
                         <mat-icon>{{subItem.icon}}</mat-icon>
-                        <span [routerLink]="[subItem.url]">{{subItem.name | translate}} </span> 
+                        <span [routerLink]="subItem.url">{{subItem.name | translate}} </span> 
                     </li>
                 </ul>
             </li>
