--- a/src/app/projects/componenets/project-form/project-form.component.html
+++ b/src/app/projects/componenets/project-form/project-form.component.html
@@ -107,7 +107,7 @@
                                 <label for="type"><em class="text-danger">*</em> {{'Type' | translate}}</label>
                                 <select class="form-control" name="type" id="type" formControlName="type">
                                     <option value="" disabled selected hidden>{{'select' | translate}}</option>
-                                    <option [value]="item.id" *ngFor="let item of projects">{{item.name}}</option>
+                                    <option [value]="item.id" *ngFor="let item of types">{{item.lookupDetailName}}</option>
                                 </select>
                          
                             </div>    
@@ -115,7 +115,7 @@
                                 <label for="currency"> <em class="text-danger">*</em> {{'Currency' | translate}}</label>
                                 <select class="form-control" name="currency" id="currency" formControlName="currency">
                                     <option value="" disabled selected hidden>{{'select' | translate}}</option>
-                                    <option [value]="item.id" *ngFor="let item of projects">{{item.name}}</option>
+                                    <option [value]="item.id" *ngFor="let item of currencies">{{item.lookupDetailName}}</option>
                                 </select>
                          
                             </div>    
@@ -127,7 +127,7 @@
                                 <label for="assignedTo">{{'AssignedTo' | translate}}</label>
                                 <select class="form-control" name="assignedTo" id="assignedTo" formControlName="assignedTo">
                                     <option value="" disabled selected hidden>{{'select' | translate}}</option>
-                                    <option [value]="item.id" *ngFor="let item of projectsArr">{{item.name}}</option>
+                                    <option [value]="item.id" *ngFor="let item of projectsArr">{{item.projectName}}</option>
                                 </select>
                               </div>   
                               <div class="col-md-6 my-1">
