--- a/src/app/projects/componenets/projects-list-mat-table/projects-list-mat-table.component.html
+++ b/src/app/projects/componenets/projects-list-mat-table/projects-list-mat-table.component.html
@@ -6,7 +6,7 @@
               {{"ProjectName" | translate}}
             </mat-panel-title>
             <mat-panel-title>
-              {{"Actions" | translate}}
+              <!-- {{"Actions" | translate}} -->Actions
             </mat-panel-title>
           </mat-expansion-panel-header>
         </mat-expansion-panel>
