--- a/src/app/projects/componenets/project-form/project-form.component.html
+++ b/src/app/projects/componenets/project-form/project-form.component.html
@@ -35,23 +35,26 @@
                                 aria-controls="dropdown-basic">
                                 <span>{{ p.value.categoryName}}</span> 
                              </button>
-                             <ul  id="dropdown-basic" *dropdownMenu class="dropdown-menu" 
-                                role="menu" aria-labelledby="button-basic">
-                               <li (click)="setParentSelectedCategory(p,category,projectIndex)" *ngFor="let category of categories">
-                                 <mat-icon class="ltr-mat-icon" [class.visibity-none]="category.sub.length === 0"  (click)="category.collapsed=true" [hidden]="category.collapsed">keyboard_arrow_right</mat-icon>
-                                <mat-icon *ngIf="category.sub && category.collapsed"  (click)="category.collapsed=false" >keyboard_arrow_down</mat-icon>
-                                <span class="name"> {{category.name}}</span> 
-                                 <div *ngIf="category.sub && category.collapsed">
-                                   <ul *ngFor="let sub of category.sub" >
-                                     <li (click)="setSelectedCategory(p,sub,$event,projectIndex)"> <span class="name"> {{sub.name}}</span> 
-                                     </li>
-                                   </ul>
- 
-                                 </div>
-                               </li>
- 
-                              
-                             </ul>
+                             <ng-container>
+                               <ul  id="dropdown-basic" *dropdownMenu class="dropdown-menu" 
+                                  role="menu" aria-labelledby="button-basic">
+                                 <li (click)="setParentSelectedCategory(p,category,projectIndex)" *ngFor="let category of categories">
+                                   <mat-icon class="ltr-mat-icon" [class.visibity-none]="category.sub.length === 0"  (click)="category.collapsed=true" [hidden]="category.collapsed">keyboard_arrow_right</mat-icon>
+                                  <mat-icon *ngIf="category.sub && category.collapsed"  (click)="category.collapsed=false" >keyboard_arrow_down</mat-icon>
+                                  <span class="name"> {{category.name}}</span> 
+                                   <div *ngIf="category.sub && category.collapsed">
+                                     <ul *ngFor="let sub of category.sub" >
+                                       <li (click)="setSelectedCategory(p,sub,$event,projectIndex)"> <span class="name"> {{sub.name}}</span> 
+                                       </li>
+                                     </ul>
+   
+                                   </div>
+                                 </li>
+   
+                                
+                               </ul>
+
+                             </ng-container>
                              
                            </div>
                           </div>
