--- a/src/app/projects/componenets/projects-list/projects-list.component.html
+++ b/src/app/projects/componenets/projects-list/projects-list.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex justify-content-between align-items-center my-3 header">
-    <strong>{{"Projects" | translate}}</strong>
+    <strong>Projects</strong>
     <button mat-raised-button color="primary" class="w-30"
     routerLink="/projects/ProjectForm" >
     <!-- *ngIf="share.getBtnGuard('ProjectsList','Insert')" -->
